--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,6 @@ jobs:
       - uses: go-semantic-release/action@v1
         with:
           hooks: goreleaser
+          allow-initial-development-versions: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
